Fix: table collapsable issue

--- a/v2-library/_src/scss/components/_table.scss
+++ b/v2-library/_src/scss/components/_table.scss
@@ -27,7 +27,7 @@
 	thead {
 		vertical-align: bottom;
 	}
-	
+
 	tbody {
 		vertical-align: inherit;
 	}
@@ -36,13 +36,13 @@
 		th {
 			border-bottom: 1px solid var(--tutor-border-color);
 			padding: 9px 16px;
-			background: #F4F6F9;
+			background: #f4f6f9;
 			border-top: 1px solid var(--tutor-border-color);
 			font-size: 14px;
 			line-height: 1.8;
 			font-weight: 500;
 			color: var(--tutor-color-secondary);
-			
+
 			&:not(.tutor-text-left):not(.tutor-text-center):not(.tutor-text-right) {
 				text-align: left;
 			}
@@ -61,7 +61,7 @@
 			padding: 16px;
 			font-size: 16px;
 			line-height: 1.6;
-			background: #FFFFFF;
+			background: #ffffff;
 			font-weight: 500;
 			color: var(--tutor-body-color);
 
@@ -73,7 +73,7 @@
 					color: var(--tutor-color-primary);
 				}
 			}
-			
+
 			&:not(.tutor-text-left):not(.tutor-text-center):not(.tutor-text-right) {
 				text-align: left;
 			}
@@ -141,5 +141,15 @@
 
 	.tutor-td-bottom {
 		vertical-align: bottom;
+	}
+
+	&.tutor-table-data-td-target {
+		.has-data-td-target {
+			&.is-active {
+				&::before {
+					transform: rotate(180deg);
+				}
+			}
+		}
 	}
 }
